--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yuml-ddt",
+  "name": "Yuml DDT",
   "private": true,
-  "version": "0.1.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -23,6 +23,6 @@
     "@vitejs/plugin-vue": "^5.0.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.0"
+    "vue-tsc": "^2.0.0"
   }
 }
